fix: align repos information to the center of the card

--- a/style.css
+++ b/style.css
@@ -192,6 +192,9 @@ a {
 
 #projects ul li {
   flex: 1 1 32%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #projects ul li a {
